k8s_hw2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-service
  labels:
    app: crud-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-service
  template:
    metadata:
      name: crud-service
      labels:
        app: crud-service
    spec:
      containers:
        - name: crud-service
          # ARM image
          image: ogara/otus-microservice:hw2-arm
          # AMD image
#          image: ogara/otus-microservice:2-amd
#          livenessProbe:
#            httpGet:
#              path: /health
#              port: 8000
#            initialDelaySeconds: 3
#            periodSeconds: 3
#          readinessProbe:
#            httpGet:
#              path: /health
#              port: 8000
#            initialDelaySeconds: 3
#            periodSeconds: 3
          ports:
            - name: web
              containerPort: 8000
