k8s_hw2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  selector:
    app: crud-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: ClusterIP
